1.69 (2011-07-29):
  Fixed issue #66 - Fresh Install Fails to Create Config
  Updated PuTTY to version 0.61
  Binaries are now digitally signed

1.68 (2011-07-07):
  Fixed issue #48 - VerifyDatabaseVersion fails with new (empty) database tables.
  Fixed issue #60 - Can't save connections file
  Fixed issue #62 - Connection file error upon launch.

1.67 (2011-06-05):
  Fixed migration of external tools configuration and panel layout from Local to Roaming folder.
  Disable ICA Hotkeys for Citrix connections.  Fixes issue with international users.
  Added a language selection option so users can override the language if they don't want it automatically detected.
  Added partial French translation to the application.
  Addded Thai translation to the installer.
  Updated graphics in the installer to mRemoteNG logo.
  Fixed RD Gateway default properties and RDP reconnection count setting not being saved.
  Fixed bug 33 - IPv6 doesn't work in quick Connect box.
  Moved the items under Tools in the Connections panel context menu up to the top level.
  Added buttons for Add Connection, Add Folder, and Sort Ascending (A-Z) to the Connections panel toolbar.
  Fixed rename edit control staying open when collapsing all folders.
  Changed sorting to sort all subfolders below the selected folder.
  Allow sorting of connections if a connection entry is selected.
  Fixed adding a connection entry if nothing is selected in the tree.
  Added 15-bit Color RDP setting.
  Fixed loading of RDP Colors setting from SQL.
  Added Font Smoothing and Desktop Composition RDP settings.
  Improved error handling when loading XML connection files.
  Added the mRemoteNG icon to the list of selectable icons for connection entries.
  Added confirmation before closing connection tabs.
  Fixed bug 42 - Maximized location not remembered with multiple monitors.
  Improved loading and saving of window location.
  Removed flickering on start up.
  Changed the Options page into a normal dialog.