@@ -1,7 +1,7 @@
 ﻿'------------------------------------------------------------------------------
 ' <auto-generated>
 '     This code was generated by a tool.
-'     Runtime Version:2.0.50727.4959
+'     Runtime Version:2.0.50727.5446
 '
 '     Changes to this file may cause incorrect behavior and will be lost if
 '     the code is regenerated.
@@ -6102,6 +6102,15 @@ Namespace My.Resources
         Friend ReadOnly Property strUpdateCheckFailed() As String
             Get
                 Return ResourceManager.GetString("strUpdateCheckFailed", resourceCulture)
+            End Get
+        End Property
+        
+        '''<summary>
+        '''  Looks up a localized string similar to mRemoteNG Portable Edition does not currently support automatic updates..
+        '''</summary>
+        Friend ReadOnly Property strUpdateCheckPortableEdition() As String
+            Get
+                Return ResourceManager.GetString("strUpdateCheckPortableEdition", resourceCulture)
             End Get
         End Property
         
