@@ -1,5 +1,6 @@
 1.69 (2011-07-29):
   Fixed issue #66 - Fresh Install Fails to Create Config
+  Disabled automatic updates in the portable edition
   Updated PuTTY to version 0.61
   Binaries are now digitally signed
 
